# ACIT5900-segmentation

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  TODO.md  pyproject.toml  test_gradcam.ipynb  test_openclip.ipynb  test_openclip_torchcam.ipynb  test_sam.ipynb
notebooks/: create_taguchi_tables.ipynb  eda_embeddings.ipynb  eda_embeddings_nn.ipynb  eda_knn_text_image.ipynb  eda_knn_text_image_uecfoodpixcomplete.ipynb  eda_taguchi.ipynb  test_ClipSam.ipynb  test_classifiers.ipynb  test_gradcam.ipynb  test_openclip.ipynb  test_openclip_torchcam.ipynb  test_sam.ipynb  test_xai_methods.ipynb  wip_eda_taguchi.ipynb
results/: processed_test_sam_vit_l_0b3195.pth.json  processed_train_subset_sam_vit_b_01ec64.pth.json  sam_vit_b_01ec64.pth.json  sam_vit_h_4b8939.pth.json  sam_vit_l_0b3195.pth.json
segmentation/: config.py  normalizers.py  run_optuna_study.py  run_taguchi_study.py  sscx.py  test_gradcam_openclip_sam.py  train_unet.py
segmentation/classifiers/: nn.py
segmentation/datasets/: __init__.py  _base.py  food50seg.py  foodseg103.py  person_segmentation.py  seg_food.py  uecfoodpixcomplete.py
segmentation/models/: __init__.py  clip.py  sam.py
segmentation/xai/: __init__.py  _base_cam.py  _basecam.py  _gradcam.py  _gradcampp.py  _hooks.py  _layercam.py  _uniform.py
studies/classifiers/: classifier.db  classifier_neural_networks.db  clustering_agglom.db  clustering_dbscan.db  clustering_kmeans.db
studies/sscx/: results.json  sscx.db
studies/taguchi/FoodSeg103/processed_train_subset_sam_vit_b_01ec64.pth.analysis/: SN_analysis.txt  eda_taguchi.ipynb  processed_train_subset_sam_vit_b_01ec64.pth.json  run_taguchi_study.py  table_ci_sign__metric='aAcc'_col='CLIP_MODEL_NAME'.txt  table_ci_sign__metric='aAcc'_col='CLIP_NORMALIZE_ATTENTION'.txt  table_ci_sign__metric='aAcc'_col='SAM_PROPOSER_NORM'.txt  table_ci_sign__metric='aAcc'_col='SAM_PROPOSER_N_POINTS'.txt  table_ci_sign__metric='aAcc'_col='XAI_METHOD'.txt  table_ci_sign__metric='mIoU'_col='CLIP_MODEL_NAME'.txt  table_ci_sign__metric='mIoU'_col='CLIP_NORMALIZE_ATTENTION'.txt  table_ci_sign__metric='mIoU'_col='SAM_PROPOSER_NORM'.txt  table_ci_sign__metric='mIoU'_col='SAM_PROPOSER_N_POINTS'.txt  table_ci_sign__metric='mIoU'_col='XAI_METHOD'.txt
studies/taguchi/UECFoodPixComplete/: UECFoodPixComplete.processed_test_sam_vit_b_01ec64.pth.json  UECFoodPixComplete.processed_train_subset_1000_sam_vit_b_01ec64.pth.json  UECFoodPixComplete.processed_train_subset_sam_vit_b_01ec64.pth.json
studies/taguchi/UECFoodPixComplete/UECFoodPixComplete.processed_test_sam_vit_b_01ec64.pth.analysis/: SN_analysis.txt  UECFoodPixComplete.processed_test_sam_vit_b_01ec64.pth.json  eda_taguchi.ipynb  run_taguchi_study.py  table_ci_sign__metric='aAcc'_col='CLIP_MODEL_NAME'.txt  table_ci_sign__metric='aAcc'_col='CLIP_NORMALIZE_ATTENTION'.txt  table_ci_sign__metric='aAcc'_col='SAM_PROPOSER_NORM'.txt  table_ci_sign__metric='aAcc'_col='SAM_PROPOSER_N_POINTS'.txt  table_ci_sign__metric='aAcc'_col='XAI_METHOD'.txt  table_ci_sign__metric='mIoU'_col='CLIP_MODEL_NAME'.txt  table_ci_sign__metric='mIoU'_col='CLIP_NORMALIZE_ATTENTION'.txt  table_ci_sign__metric='mIoU'_col='SAM_PROPOSER_NORM'.txt  table_ci_sign__metric='mIoU'_col='SAM_PROPOSER_N_POINTS'.txt  table_ci_sign__metric='mIoU'_col='XAI_METHOD'.txt
studies/taguchi/UECFoodPixComplete/UECFoodPixComplete.processed_train_subset_1000_sam_vit_b_01ec64.pth.analysis/: SN_analysis.txt  (+11 more)
taguchi_designs/: L16B.csv
